--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.0.17",
+    "@radix-ui/react-slot": "^1.0.2",
     "aws-amplify": "^6.0.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "node": "^18.19.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
